@@ -22,6 +22,7 @@
 #define METACITY_THEME_KEY "/apps/metacity/general/theme"
 #define ICON_THEME_KEY "/desktop/gnome/interface/icon_theme"
 #define COLOR_SCHEME_KEY "/desktop/gnome/interface/gtk_color_scheme"
+#define CURSOR_FONT_KEY "/desktop/gnome/peripherals/mouse/cursor_font"
 #define CURSOR_THEME_KEY "/desktop/gnome/peripherals/mouse/cursor_theme"
 #define CURSOR_SIZE_KEY "/desktop/gnome/peripherals/mouse/cursor_size"
 #define LOCKDOWN_KEY "/desktop/gnome/lockdown/disable_theme_settings"
